--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/KUNAL DASH_UPDATED_CV.pdf')"
+            onclick="window.open('./assets/Kunal_Dash_2105804_CV.pdf')"
           >
             Download CV
           </button>
